Fixed cropping for 16:9 device with 4:3 camera.

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,8 +1,19 @@
 page-home {
+  .transparent {
+    background-color: transparent !important;
+  }
   ion-content {
-      background-image: url('../assets/MaskExample.png');
-      background-repeat: no-repeat;
-      background-size: cover;
+    background-color: black !important;
+    background-image: url('../assets/Mask-2.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    #myCanvas {
+      position: fixed;
+      top: 35% !important;
+      left: 0 !important;
+      width: 100%;
+      height: 30%;
+    }
   }
   ion-footer {
     color: white;
